src/app/components/widgets/stock-widget/stock-widget.component.scss
@use '../../../../styles' as s;

div>span {
    margin-left: 5px;
    width: fit-content
}

.chart {
    height: 70%;
    width: 95%;
}

.container {
    display: flex;
    flex-direction: column;
    width: 99%;
    height: 100%;
    container-name: main;
    container-type: inline-size;
}

.details {
    font-family: s.$font;
    font-size: 1.2rem;
    align-items: center;
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    gap: 5px;
    flex-wrap: wrap;
    object-fit: cover;
    padding-top: 20px;
}

.info {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: 3px
}

.top>* {
    font-family: s.$font;
    font-size: 2rem;
}

.info>span>.currency {
    font-size: 16px;
    color: rgba(0, 0, 0, .62);
}

.info>.rate {
    font-size: 1rem;
}

.wse {
    font-weight: bold;
    font-size: 2rem;
}

.top {
    height: fit-content;
    display: flex;
    justify-content: center;
    align-items: center;
}

@container main (width < 280px) {
    .top {
        width: 100%;
        height: 100%;
        justify-content: center;
        align-items: center;
    }

    .chart {
        display: none;
    }

    .details {
        display: none;
    }
}

